--- a/index.css
+++ b/index.css
@@ -150,21 +150,25 @@
     gap: 24px;
     align-items: center;
 }
-.aboutFeatures h2{
+
+.aboutFeatures h2 {
     color: #181D27;
-text-align: center;
-font-size: 36px;
+    text-align: center;
+    font-size: 36px;
 }
-.aboutFeatures p{
+
+.aboutFeatures p {
     color: #535862;
-text-align: center;
-font-size: 20px;
+    text-align: center;
+    font-size: 20px;
 }
-.mainFrameHeader{
+
+.mainFrameHeader {
     color: #6941C6;
-text-align: center;
-font-size: 16px;
+    text-align: center;
+    font-size: 16px;
 }
+
 .cards {
     display: flex;
     align-items: center;
@@ -187,11 +191,157 @@ font-size: 16px;
     color: #181D27;
     font-size: 16px;
 }
-.featureCards p{
+
+.featureCards p {
     color: #535862;
-font-size: 14px;
+    font-size: 14px;
 }
-.lines{
+
+.lines {
     border-right: 2px solid #535862;
     border-left: 2px solid #535862;
+}
+
+.pricesFrame {
+    display: flex;
+    max-width: 1024px;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+}
+
+.pricesFrame h2 {
+    color: #181D27;
+    font-size: 36px;
+}
+
+.pricesFrame p {
+    color: #535862;
+    font-size: 18px;
+}
+.pricingCards{
+    display: flex;
+align-items: flex-start;
+gap: 32px;
+}
+.pricingCard{
+    display: flex;
+flex-direction: column;
+align-items: center;
+border-radius: 16px;
+border: 1px solid #E9EAEB;
+padding: 32px;
+}
+.benefits{
+    display: flex;
+padding: 32px 32px 40px 32px;
+flex-direction: column;
+align-items: flex-start;
+gap: 24px;
+align-self: stretch;
+border-bottom:  1px solid #E9EAEB;
+
+}
+.benefit{
+    display: flex;
+align-items: flex-start;
+gap: 12px;
+}
+.pricingCard h4{
+    color: #6941C6;
+font-size: 20px
+}
+.pricingCard p{
+    color: #535862;
+font-size: 16px;
+}
+.pricingCard h3{
+    color: #181D27;
+font-size: 48px;
+}
+.startingButton{
+     padding: 32px;
+     display: flex;
+padding: 18px;
+justify-content: center;
+align-items: center;
+gap: 6px;
+border-radius: 8px;
+background: #7F56D9;
+max-width: 432px;
+width: 100%;
+color: #FFF;
+font-size: 16px;
+}
+.reneeWellsFrame{
+    display: flex;
+    max-width: 1024px;
+    width: 100%;
+align-items: center;
+border-radius: 24px;
+background: #53389E;
+}
+.reneeWells{
+    display: flex;
+padding: 64px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 40px;
+}
+.quoteFramee{
+    display: flex;
+flex-direction: column;
+align-items: flex-start;
+gap: 24px;
+}
+.quoteFrame h2{
+    color: #FFF;
+font-size: 36px;
+}
+.reneeWellsFrame img{
+    border-top-right-radius: 24px;
+    border-bottom-right-radius: 24px;
+}
+.reneeWellsFrame h4{
+    color: #FFF;
+font-size: 18px;
+}
+.reneeWellsFrame {
+    color: #E9D7FE;
+    font-size: 16px;
+}
+footer{
+    display: flex;
+width: 1440px;
+justify-content: center;
+flex-direction: column;
+align-items: center;
+gap: 64px;
+}
+.footer{
+    display: flex;
+justify-content: space-between;
+align-items: center;
+align-self: stretch;
+max-width: 1024px;
+width: 100%;
+}
+.footerWrapper{
+    max-width: 1024px;
+    width: 100%;
+}
+.footerP{
+    display: flex;
+justify-content: center;
+align-items: center;
+gap: 32px;
+}
+footer{
+    margin-top: 106px;
+}
+footer p{
+    color: #717680;
+font-size: 16px;
 }
