--- a/index.css
+++ b/index.css
@@ -314,7 +314,7 @@ font-size: 18px;
 }
 footer{
     display: flex;
-width: 1440px;
+width: 100%;
 justify-content: center;
 flex-direction: column;
 align-items: center;
